--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "express": "^4.18.1",
     "mongoose": "^6.3.3",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
