--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.3.3",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.23.0"
   },
