successful requests tospoonaccular  API database has been set up

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URI="mongodb+srv://christielaferriere:3J0xuGzLQdS6nFTq@cluster0.2apl6yc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+REACT_APP_API_KEY="96de5f8d876b4599a17a24264d8ba2f9"
