--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.23.0"
+    "react-icons": "^5.1.0",
+    "react-router-dom": "^6.23.0",
+    "sass": "^1.75.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
@@ -19,10 +21,12 @@
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.5",
     "concurrently": "^8.2.2",
-    "css-loader": "^6.7.1",
+    "css-loader": "^6.11.0",
     "html-webpack-plugin": "^5.5.0",
+    "node-sass": "^9.0.0",
     "nodemon": "^2.0.15",
-    "style-loader": "^3.3.1",
+    "sass-loader": "^14.2.1",
+    "style-loader": "^3.3.4",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
@@ -30,7 +34,8 @@
   "scripts": {
     "start": "node src/server/index.js",
     "dev": "concurrently \"webpack serve --mode development --open\" \"nodemon src/server/index.js\"",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "compile-scss": "node-sass src/styles/custom.scss -o src/styles"
   },
   "proxy": "http://localhost:3000"
 }
