--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.0.0",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.23.0",
-    "sass": "^1.75.0"
+    "sass": "^1.75.0",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
