--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-# add your own Mongo URI info 
-# MONGO_URI="mongodb+srv://:@cluster0.2apl6yc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URI="mongodb+srv://christielaferriere:3J0xuGzLQdS6nFTq@cluster0.2apl6yc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
