--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URI="mongodb+srv://christielaferriere:3J0xuGzLQdS6nFTq@cluster0.2apl6yc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+# Insert MONGODB URI connection string
+MONGO_URI=""
